feat: configura GitHub Pages deploy e atualiza baseURL

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://HaisonOhara.github.io/"
+baseURL = "https://haisonohara.github.io/CodeLab-TechBlog/"
 languageCode = "pt-br"
 title = "CodeLab - Tech Blog"
 theme = "PaperMod"
